chore: fix nav search not closing when tapping outside on mobile

--- a/assets/scss/components/compat/woocommerce/_product.scss
+++ b/assets/scss/components/compat/woocommerce/_product.scss
@@ -23,6 +23,7 @@
 	flex-grow: 1;
 	display: flex;
 	justify-content: center;
+	align-items: center;
   }
 }
 
